# fundamentus-crawler

./: .gitignore  README.md  out.csv  pyproject.toml
fundamentus_crawler/: scrapper.py  ticker.json  ticker_scrapper.py
json/05-Mar-2022/: 05-Mar-2022 (13:55:47.967920).json
results/05-Mar-2022/: 05-Mar-2022 (13:55:47.967916).csv
tests/: test_fundamentus_crawler.py
